--- a/Fernando Chaves Advocacia/index.html
+++ b/Fernando Chaves Advocacia/index.html
@@ -4,6 +4,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width">
+        <link rel="sortcut icon" href="/images/icone.png" type="image/x-png">
         <title>Chves Advocacia</title>
 
         <link rel="stylesheet" href="css/reset.css">
@@ -19,9 +20,9 @@
             <h1>Fernando Chaves Advocacia</h1>
             <div class="div-header">
                 <ul class="ul-header">
-                    <li><a href="">Quem somos</a></li>
-                    <li><a href="">Áreas de Atuação</a></li>
-                    <li><a href="">Contato</a></li>
+                    <li><a href="">&#8226;Quem somos</a></li>
+                    <li><a href="">&#8226;Áreas de Atuação</a></li>
+                    <li><a href="">&#8226;Contato</a></li>
                 </ul>                
             </div>
         </header>
@@ -42,11 +43,11 @@
                     <h3 class="titulos">Áreas de Atuação</h3>
                     <ul>
                         <li>INSS</li>
-                        <li>Direito Trabalista</li>
+                        <li>Direitos Trabalistas</li>
                         <li>Impostos</li>
-                        <li>Direito Familiar</li>
-                        <li>Rolada</li>
-                        <li>Mamada</li>
+                        <li>Invetários</li>
+                        <li>Divorcios</li>
+                        <li>Pensão</li>
                     </ul>
 
                 </div>
